2007-02-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker.xml:
	  make rotateType default to None
	  add an Error message if a rotateType is given but the
	  corresponding property is not

2007-02-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/bouncers/icalbouncer.py:
	  a stray tab was breaking trial --coverage; expand it

2007-02-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/pychecker.mk:
	  Andy removed the configure-time GStreamer version checking,
	  so pychecker does not check 0.10 code anymore.  
	  Since atm we always require 0.10, make this an always true statement
	  instead to get it checked.

2007-02-16  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/bouncers/bouncer.py:
	  Refactor base bouncer class to split 'authenticate' into a base
	  method that enforces keycard classes and enabled/disabled state, and
	  a new 'do_authenticate' method for subclasses to implement their
	  specific behaviour, mirroring the setup/start/stop API.
	  Make base bouncer class have 'enabled' state, and remote method to
	  change it.
	  Add a trivial bouncer example that only acts on that state.
	  Add a subclass for challenge-response bouncers.

	* flumotion/component/bouncers/htpasswdcrypt.py:
	* flumotion/component/bouncers/saltsha256.py:
	  Move to using ChallengeResponseBouncer class.

	* flumotion/component/bouncers/icalbouncer.py:
	* flumotion/component/bouncers/tokentest.py:
	  Clean up now that new API does more for us.

2007-02-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/avltree.py (insert, delete): Fix string
	splicing.

2007-02-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	If we get a gstreamer error, errback any stateChangeDefers for
	READY->PAUSED.  This fixes issue where we do not errback on
	providing master clock.