@@ -1,5 +1,10 @@
 2007-02-19  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/launch/main.py:
+	  print out additional debug info if it's there
+
+2007-02-19  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* flumotion/component/consumers/disker/disker.py:
 	* flumotion/component/consumers/disker/disker.xml:
 	  make rotateType default to None
